app folder dialog: Make the dialog work again

This commit makes the code match with the .ui file changes done in
commit 5fa5a35, fixing the add folder dialog to actually add things to
folders when clicking the 'Add' button.

https://bugzilla.gnome.org/show_bug.cgi?id=764437